--- a/Générateur PU.html
+++ b/Générateur PU.html
@@ -18,10 +18,13 @@
     <div class="step active" id="step1">
         <h3>Étape 1: Sélectionnez la catégorie</h3>
         <h5>(Les courroies soudées peuvent être appelées fermées ou sans fin par les clients)</h5>
-        <div id="categoryButtons"></div>
+        <!-- Remettre les boutons en dur pour la première étape -->
+        <button onclick="selectOption('','R', 2)">Courroie ouverte</button>
+        <button onclick="selectOption('','V', 2)">Courroie soudée</button>
+        <button onclick="selectOption('','F', 2)">Courroie flex</button>
     </div>
 
-    <!-- Étape 2: Sélection du profil -->
+    <!-- Les autres étapes restent inchangées -->
     <div class="step" id="step2">
         <button class="back-button" onclick="goBack(1)">Retour</button>
         <h3>Étape 2: Sélectionnez le profil</h3>
@@ -29,22 +32,23 @@
         <button onclick="selectProfile()">Suivant</button>
     </div>
 
-    <!-- Étape 3: Sélection de la largeur -->
     <div class="step" id="step3">
         <button class="back-button" onclick="goBack(2)">Retour</button>
         <h3>Étape 3: Sélectionnez la largeur</h3>
         <div id="widthOptions"></div>
     </div>
 
-    <!-- Étape 4: Sélection du câble -->
     <div class="step" id="step4">
         <button class="back-button" onclick="goBack(3)">Retour</button>
         <h3>Étape 4 : Sélectionnez le câble</h3>
         <h5>(Si le client ne le précise pas, le choix par défaut est acier)</h5>
-        <div id="cableButtons"></div>
+        <div id="cableButtons">
+            <button onclick="selectOption('','A', 5)">Acier</button>
+            <button onclick="selectOption('','K', 5)">Kevlar</button>
+            <button onclick="selectOption('','S', 5)">Inox</button>
+        </div>
     </div>
 
-    <!-- Étape 5: Saisie de la longueur -->
     <div class="step" id="step5">
         <button class="back-button" onclick="goBack(4)">Retour</button>
         <h3>Étape 5: Entrez la longueur en mm</h3>
@@ -55,18 +59,20 @@
         <button onclick="validateSize()">Valider</button>
     </div>
 
-    <!-- Étape 6: Sélection de revêtement en tissu -->
     <div class="step" id="step6">
         <button class="back-button" onclick="goBack(5)">Retour</button>
         <h3>Première option: Sélectionnez un revêtement en tissu</h3>
-        <div id="coatingButtons"></div>
+        <div id="coatingButtons">
+            <button onclick="selectOptionalOption('/Z', 'PAZ', 7)">PAZ</button>
+            <button onclick="selectOptionalOption('/R', 'PAR', 7)">PAR</button>
+            <button onclick="selectOptionalOption('/D', 'PAZ + PAR', 7)">PAZ + PAR</button>
+        </div>
     </div>
 
     <!-- Résultat -->
     <div id="result"></div>
     <div id="designation"></div>
 
-    <script src="data.json" type="application/json"></script>
     <script src="script.js"></script>
 </body>
 </html>
