--- a/Générateur PU.html
+++ b/Générateur PU.html
@@ -23,7 +23,7 @@
     <!-- Étape 2: Sélection du profil -->
     <div class="step" id="step2">
         <button class="back-button" onclick="goBack(1)">Retour</button>
-        <h3>Sélectionnez le profil</h3>
+        <h3>Sélectionnez un profil dans la liste</h3>
         <select id="profileSelect" onchange="updateStep3Options()"></select>
         <button onclick="selectProfile()">Suivant</button>
     </div>
