--- a/Générateur PU.html
+++ b/Générateur PU.html
@@ -60,7 +60,7 @@
         <h3>Sélectionnez un revêtement en tissu</h3>
         <div id="coatingButtons">
             <button onclick="selectOptionalOption('', 'Sans')">Sans</button>
-			<button onclick="selectOptionalOption('/Z', 'PAZ', 7)">PAZ</button>
+            <button onclick="selectOptionalOption('/Z', 'PAZ', 7)">PAZ</button>
             <button onclick="selectOptionalOption('/R', 'PAR', 7)">PAR</button>
             <button onclick="selectOptionalOption('/D', 'PAZ + PAR', 7)">PAZ + PAR</button>
         </div>
@@ -68,9 +68,10 @@
     <!-- Résultat -->
     <div id="result-container">
         <div id="weldabilityInfo"></div>
-    <div id="result" class="result-style"></div>
-    <div id="designation" class="result-style"></div>
+        <div id="result" class="result-style"></div>
+        <div id="designation" class="result-style"></div>
+        <div id="specialCode" class="result-style"></div>
     </div>
-    <script src="script.js"></script>
+    <script src="script.js"></script> <!-- Assurez-vous que ce fichier existe et est dans le bon chemin -->
 </body>
 </html>
