--- a/Générateur PU.html
+++ b/Générateur PU.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="theme-switcher">
+        <input type="checkbox" id="switch" />
+        <label for="switch">Toggle</label>
+    </div>
     <h1>Générateur de code article</h1>
     <!-- Barre de progression -->
     <div id="progressBar">
