--- a/Générateur PU.html
+++ b/Générateur PU.html
@@ -73,7 +73,8 @@
         <div id="weldabilityInfo"></div>
         <div id="result" class="result-style"></div>
         <div id="designation" class="result-style"></div>
-        <div id="specialCode" class="result-style"></div>
+        <div id="CodeStock" class="result-style"></div>
+        <div id="alternativeCodeStock" class="result-style"></div>
     </div>
     <script src="script.js"></script> <!-- Assurez-vous que ce fichier existe et est dans le bon chemin -->
 </body>
