--- a/Générateur PU.html
+++ b/Générateur PU.html
@@ -73,8 +73,8 @@
             <button onclick="selectOption('','A', 5)">Acier</button>
             <button onclick="selectOption('','K', 5)">Kevlar</button>
             <button onclick="selectOption('','S', 5)">Inox</button>
-            <button onclick="selectOption('','HFE', 5)">Haute flexibilité</button>
-            <button onclick="selectOption('','HPL', 5)">Haute performance</button>
+            <button onclick="selectOption('','HFE', 5)">Haute Flexibilité</button>
+            <button onclick="selectOption('','HPL', 5)">Haute Performance</button>
             <button onclick="selectOption('','XHPL', 5)">Très Haute Performance</button>
         </div>
     </div>
